--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,15 @@ html, body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+.yummy {
+    color: #26d4f3;
+    -webkit-background-clip: text;
+            background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation:  
+    hue 10s linear infinite, fadeIn ease 20s;
+    }
+
 #Progress_Status { 
   width: 50%; 
   background-color: #ddd; 
@@ -11,6 +20,7 @@ html, body {
   
 #myprogressBar { 
   width: 1%; 
+  max-width: 100%;
   height: 35px; 
   background-color: red; 
   text-align: center; 
